# kkm_https_accessor

./: CMakeLists.txt  LICENSE.txt  README.ENG.md
_build/: sntz.log.to.file.cmd  sntz.log.to.stdout.cmd  sntz.suppressions.lst
_build/conf/: kkmha.json
_clang/: build_crtd.cmd  build_release.cmd  build_sntz.cmd  config_build.cmd  config_env.cmd  test.cmd  test_building.cmd
_msvc/: build_crtd.cmd  build_debug.cmd  build_elogmsg.cmd  build_release.cmd  config_build.cmd  install_dynamic_deps.cmd  install_static_deps.cmd  test.cmd  test_building.cmd
docs/: api.md  build.md  cli.md  config.md
examples/: kkmha_json_test.cmd
src/cmake/: options.h.in  variables.h.in
src/kkmha/: CMakeLists.txt  asio.h  http_binary_response.h  http_constant_response.h  http_json_response.h  http_logger.h  http_parser.cpp  http_parser.h  http_proto_response.h  http_request.h  http_response.h  http_solid_response.h  http_strings.h  http_types.h  kkmha_main.cpp  kkmha_variables.cpp  server_cache_core.cpp  server_cache_core.h  server_cache_strings.h  server_cache_types.h  server_config_handler.cpp  server_config_handler.h  server_core.cpp  server_core.h  server_counter.h  server_default_handler.cpp  server_default_handler.h  server_defaults.h  server_except.h  server_failure.h  server_kkmop_handler.cpp  server_kkmop_handler.h  server_kkmop_strings.h  server_logger.h  server_ping_handler.cpp  server_ping_handler.h  server_proto_handler.h  server_static_handler.cpp  server_static_handler.h  server_static_varop.cpp  (+4 more)
src/kkmjl/: CMakeLists.txt  kkmjl_core.h  kkmjl_main.cpp  kkmjl_variables.cpp
src/kkmop/: CMakeLists.txt  kkmop_core.h  kkmop_main.cpp  kkmop_strings.h  kkmop_variables.cpp
src/regmsg/: CMakeLists.txt  messages.mc  registry.cpp  registry.h  regmsg_main.cpp
tests/: CMakeLists.txt  ccy_common.h  ccy_dynamique.cpp  ccy_dynrespool.cpp  ccy_spinlock_a.cpp  ccy_spinlock_p.cpp  ccy_spinlock_w.cpp  ccy_spinlock_y.cpp  ccy_statique.cpp  lib_hexer.cpp  lib_json.cpp  lib_text.cpp  lib_wconv.cpp
